--- a/game.html
+++ b/game.html
@@ -300,6 +300,7 @@
 						// do nothing
 					} else if (e.keyCode === 32) {
 						if (denominatorInput.value.length > 0) {
+							e.preventDefault();
 							checkAnswer();
 						}
 						e.preventDefault(); // Prevent the space from being entered
@@ -315,8 +316,8 @@
 						numeratorInput.focus();
 						// Automatically switch focus to the denominator when two digits are entered into the numerator
 					} else if (e.target.value.length === 2) {
-						checkAnswer();
 						e.preventDefault();
+						checkAnswer();
 					}
 				});
 			}
@@ -524,11 +525,32 @@
 			completedEquations.appendChild(li);
 		}
 
+		function equationHidden() {
+			const completedEquations = document.getElementById("completedEquations");
+			if (completedEquations.childElementCount > 7) {
+				console.log("haha!");
+			}
+			const equation = document.querySelector('.equation');
+			for (let child of equation.children) {
+				if (child.tagName !== 'IMG') {
+					if (child.style.display === 'none') {
+						return true;
+					} else {
+						break;
+					}
+				}
+			}
+			const banner = document.getElementById('introBanner');
+			return banner.style.display != 'none';
+		}
+
 		let cancelAnimation;
 
 		function checkAnswer() {
-			cancelAnimation();
-			checkAnswerAndAddToSummary();
+			if (!equationHidden()) {
+				cancelAnimation();
+				checkAnswerAndAddToSummary();
+			}
 		}
 
 		function doesOverlap(startX, slope, playerAnswerArea, equation, gamePlayAreaHeight) {
@@ -602,7 +624,7 @@
 			const dy = gamePlayAreaHeight;
 			const hypotenuse = Math.sqrt(dx * dx + dy * dy);
 
-			const speed = 0.2;
+			const speed = 5;
 			const velocityX = speed * (dx / hypotenuse);
 			const velocityY = speed * (dy / hypotenuse);
 
