--- a/game.html
+++ b/game.html
@@ -214,7 +214,7 @@
 						</li>
 					</ul>
 					</p>
-					<p><strong>Press <strong>SPACE</strong> start the game!</strong></p>
+					<p><strong>Press <strong>SPACE</strong> to start the game!</strong></p>
 				</div>
 			</div>
 			<div class="equation">
